--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
     "scripts": [
       "lib/jquery.slim.min.js",
       "lib/js-yaml.min.js",
+      "lib/handlebars.min.js",
       "src/moyparser.js",
       "src/moytemplate.js",
       "src/bg.js"
