--- a/manifest.json
+++ b/manifest.json
@@ -13,11 +13,11 @@
   "version": "2.0.0",
 
   "icons": {
-    "128": "icon.png"
+    "128": "res/icon.png"
   },
 
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "res/icon.png"
   },
 
   "background": {
