--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 
   "name": "Moy.Design",
   "description": "Change the looks of your favourite websites. You can either make your own looks or use ones other people made.",
-  "version": "2.0.2",
+  "version": "2.1.0",
 
   "icons": {
     "128": "res/icon.png"
@@ -43,6 +43,7 @@
   ],
 
   "web_accessible_resources": [
-    "src/frame.html"
+    "src/frame.html",
+    "src/settings.html"
   ]
 }
