--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
   },
 
   "name": "Moy.Design",
-  "description": "Change the looks of your favourite websites. You can either make your own looks or use ones other people made.",
-  "version": "2.1.4",
+  "description": "Makes web pages lightweight, more readable and more user-friendly.",
+  "version": "2.1.5",
 
   "icons": {
     "128": "res/icon.png"
