--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
 
   "name": "Moy.Design",
   "description": "Makes web pages lightweight, more readable and more user-friendly.",
-  "version": "2.2.2",
+  "version": "2.3.0",
 
   "icons": {
     "128": "res/icon.png"
@@ -24,8 +24,8 @@
     "scripts": [
       "lib/browser-polyfill.min.js",
       "lib/jquery.slim.min.js",
-      "lib/js-yaml.min.js",
-      "lib/handlebars.min.js",
+      "lib/js-yaml.js",
+      "lib/mustache.js",
       "src/moyparser.js",
       "src/moytemplate.js",
       "src/bg.js"
